prevent horizontal scroll in navigation on mobile

--- a/source/stylesheets/_bootstrap_nav.scss
+++ b/source/stylesheets/_bootstrap_nav.scss
@@ -75,6 +75,7 @@ $logo-height: 30px;
 //
 .navbar {
   padding: 0 10px;
+  background-color: white;
   .navbar-nav.pages {
     & > li {
       padding: 0;
@@ -86,8 +87,9 @@ $logo-height: 30px;
 }
 
 // Why doesn't bootstrap set this? It seems necessary. CGB 2015 Oct 19
-.navbar-collapse {
+.navbar-fixed-top .navbar-collapse {
   overflow-x: hidden;
+  max-height: 400px;
 }
 
 // Hamburger menu
@@ -156,6 +158,7 @@ $logo-height: 30px;
   }
 }
 
+// At smaller
 @media all and (max-width: $breakpoint) {
   li a:hover {
     border-bottom-width: 0!important;
